--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,15 @@
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-minecraft_version=1.19.2
+
+minecraft_version=1.19.1
+supported_version=1.19-1.19.2
+
 archives_base_name=paragon
-mod_version=1.0.0
+mod_version=1.0.1
 maven_group=com.kyanite
+
 architectury_version=5.12.45
-fabric_loader_version=0.14.9
-fabric_api_version=0.63.0+1.19.2
-forge_version=1.19.2-43.1.43
+
+fabric_loader_version=0.14.8
+fabric_api_version=0.58.5+1.19.1
+
+forge_version=1.19.1-42.0.1
