Fix forge + example changes

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
 
+    include implementation('com.moandjiezana.toml:toml4j:0.7.2')
+    include implementation('org.yaml:snakeyaml:1.27')
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
