--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,8 @@
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+
+    implementation 'com.moandjiezana.toml:toml4j:0.7.2'
+    implementation 'org.yaml:snakeyaml:1.27'
 }
 
 architectury {
