--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -17,6 +17,9 @@ configurations {
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
 
+    include(implementation(forgeRuntimeLibrary("com.moandjiezana.toml:toml4j:0.7.2")))
+    include(implementation(forgeRuntimeLibrary("org.yaml:snakeyaml:1.27")))
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
 }
