--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     include implementation('com.moandjiezana.toml:toml4j:0.7.2')
     include implementation('org.yaml:snakeyaml:1.27')
+    include implementation('blue.endless:jankson:1.2.1')
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
