--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
     include(implementation(forgeRuntimeLibrary("com.moandjiezana.toml:toml4j:0.7.2")))
     include(implementation(forgeRuntimeLibrary("org.yaml:snakeyaml:1.27")))
+    include(implementation(forgeRuntimeLibrary('blue.endless:jankson:1.2.1')))
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
