--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,7 @@ architectury_version=5.12.45
 
 fabric_loader_version=0.14.8
 fabric_api_version=0.58.5+1.19.1
-
 forge_version=1.19.1-42.0.1
+
+modrinth_id=M1720s8h
+curseforge_id=689888
