--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -72,31 +72,16 @@ task renameJarForPublication(type: Zip, dependsOn: remapJar) {
 
 assemble.dependsOn renameJarForPublication
 
-unifiedPublishing {
-    project {
-        displayName = "[Forge $rootProject.minecraft_version] $project.version"
-        releaseType = "release"
-        changelog = releaseChangelog()
-        gameVersions = ["${rootProject.minecraft_version}"]
-        gameLoaders = ["forge"]
-        mainPublication renameJarForPublication
-
-        var CURSE_API_KEY = project.findProperty("CURSEFORGE_TOKEN") ?: System.getenv("CURSEFORGE_TOKEN")
-        if(CURSE_API_KEY != null) {
-            curseforge {
-                token = CURSE_API_KEY
-                id = rootProject.curseforge_id
-                gameVersions.addAll "Java 17", "1.19", "1.19.1", "1.19.2"
-            }
+publishing {
+    publications {
+        mavenForge(MavenPublication) {
+            artifactId = rootProject.archives_base_name + "-" + project.name
+            from components.java
         }
+    }
 
-        var MODRINTH_TOKEN = project.findProperty("MODRINTH_TOKEN") ?: System.getenv("MODRINTH_TOKEN")
-        if(MODRINTH_TOKEN != null) {
-            modrinth {
-                token = MODRINTH_TOKEN
-                id = rootProject.modrinth_id
-                version = "$project.version+$project.name"
-            }
-        }
+    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+    repositories {
+        // Add repositories to publish to here.
     }
 }
