--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
-minecraft_version=1.19
-supported_version=1.19-1.19.3
+minecraft_version=1.18.2
+supported_version=1.18.2
 
 archives_base_name=paragon
 mod_version=3.0.0
@@ -10,6 +10,6 @@ maven_group=com.kyanite
 architectury_version=5.12.45
 
 fabric_loader_version=0.14.11
-fabric_api_version=0.58.0+1.19
+fabric_api_version=0.67.0+1.18.2
 
-forge_version=1.19-41.1.0
+forge_version=1.18.2-40.1.86
