--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.19
 supported_version=1.19-1.19.3
 
 archives_base_name=paragon
-mod_version=3.0.0
+mod_version=3.0.2
 maven_group=com.kyanite
 
 architectury_version=5.12.45
@@ -13,3 +13,6 @@ fabric_loader_version=0.14.11
 fabric_api_version=0.58.0+1.19
 
 forge_version=1.19-41.1.0
+
+modrinth_id=M1720s8h
+curseforge_id=689888
